package gov.cms.bfd.pipeline.rda.grpc.server;

import static org.junit.jupiter.api.Assertions.assertEquals;

import com.google.protobuf.InvalidProtocolBufferException;
import com.google.protobuf.util.JsonFormat;
import gov.cms.mpsm.rda.v1.mcs.McsClaim;
import gov.cms.mpsm.rda.v1.mcs.McsDiagnosisCode;
import java.time.Clock;
import java.time.Instant;
import java.time.ZoneOffset;
import org.junit.jupiter.api.Test;

public class RandomMcsClaimGeneratorTest {
  @Test
  public void randomClaim() throws InvalidProtocolBufferException {
    final Clock july1 = Clock.fixed(Instant.ofEpochMilli(1625172944844L), ZoneOffset.UTC);
    final RandomMcsClaimGenerator generator = new RandomMcsClaimGenerator(1, true, july1);
    final McsClaim claim = generator.randomClaim();
    final String json = JsonFormat.printer().print(claim);
    assertEquals(claim.getIdrDtlCnt(), claim.getMcsDetailsList().size());
    for (McsDiagnosisCode diagnosisCode : claim.getMcsDiagnosisCodesList()) {
      assertEquals(claim.getIdrClmHdIcn(), diagnosisCode.getIdrClmHdIcn());
    }
    assertEquals(
        "{\n"
            + "  \"idrClmHdIcn\": \"84555\",\n"
            + "  \"idrContrId\": \"99\",\n"
            + "  \"idrHic\": \"48\",\n"
            + "  \"idrClaimTypeEnum\": \"CLAIM_TYPE_MEDICAL\",\n"
            + "  \"idrDtlCnt\": 3,\n"
            + "  \"idrBeneLast16\": \"mtrdh\",\n"
            + "  \"idrBeneFirstInit\": \"t\",\n"
            + "  \"idrBeneMidInit\": \"g\",\n"
            + "  \"idrBeneSexEnum\": \"BENEFICIARY_SEX_FEMALE\",\n"
            + "  \"idrStatusCodeEnum\": \"STATUS_CODE_ACTIVE_SEPARATE_HISTORY\",\n"
            + "  \"idrStatusDate\": \"2021-05-05\",\n"
            + "  \"idrBillProvNpi\": \"cs2\",\n"
            + "  \"idrBillProvNum\": \"4601656\",\n"
            + "  \"idrBillProvEin\": \"9\",\n"
            + "  \"idrBillProvType\": \"n\",\n"
            + "  \"idrBillProvSpec\": \"jd\",\n"
            + "  \"idrBillProvPriceSpec\": \"w\",\n"
            + "  \"idrBillProvCounty\": \"c\",\n"
            + "  \"idrBillProvLoc\": \"qc\",\n"
            + "  \"idrTotAllowed\": \"12749.95\",\n"
            + "  \"idrCoinsurance\": \"0.69\",\n"
            + "  \"idrDeductible\": \"322.93\",\n"
            + "  \"idrBillProvStatusCdEnum\": \"BILLING_PROVIDER_STATUS_CODE_PARTICIPATING\",\n"
            + "  \"idrTotBilledAmt\": \"0.01\",\n"
            + "  \"idrClaimReceiptDate\": \"2021-03-06\",\n"
            + "  \"idrClaimMbi\": \"5qbm7h0\",\n"
            + "  \"mcsDiagnosisCodes\": [{\n"
            + "    \"idrClmHdIcn\": \"84555\",\n"
            + "    \"idrDiagIcdTypeEnum\": \"DIAGNOSIS_ICD_TYPE_ICD9\",\n"
            + "    \"idrDiagCode\": \"78\"\n"
            + "  }],\n"
            + "  \"mcsDetails\": [{\n"
            + "    \"idrDtlStatusEnum\": \"DETAIL_STATUS_PENDING\",\n"
            + "    \"idrDtlFromDate\": \"2021-02-21\",\n"
            + "    \"idrDtlToDate\": \"2021-03-20\",\n"
            + "    \"idrProcCode\": \"0qkr\",\n"
            + "    \"idrModOne\": \"j\",\n"
            + "    \"idrModTwo\": \"8\",\n"
            + "    \"idrModThree\": \"q\",\n"
            + "    \"idrModFour\": \"g\",\n"
            + "    \"idrDtlDiagIcdTypeEnum\": \"DIAGNOSIS_ICD_TYPE_ICD10\",\n"
            + "    \"idrDtlPrimaryDiagCode\": \"030hphj\",\n"
            + "    \"idrKPosLnameOrg\": \"wdjg\",\n"
            + "    \"idrKPosFname\": \"pmkxcqmtdnvxrxjwxzdmxgrfdgxmvb\",\n"
            + "    \"idrKPosMname\": \"qzqbbdwpjwndfxpgfh\",\n"
            + "    \"idrKPosAddr1\": \"59q3snspqs7705gd0cs82bw2f\",\n"
            + "    \"idrKPosAddr21st\": \"4zdgc9j9mkh9zmg41mwjmfsx494s3t\",\n"
            + "    \"idrKPosAddr22nd\": \"dkrfpq5z7\",\n"
            + "    \"idrKPosCity\": \"jchbpvgghmpdcttnqzbpqrm\",\n"
            + "    \"idrKPosState\": \"g\",\n"
            + "    \"idrKPosZip\": \"776\",\n"
            + "    \"idrTosUnrecognized\": \"h\",\n"
            + "    \"idrTwoDigitPosUnrecognized\": \"6\",\n"
            + "    \"idrDtlRendType\": \"s\",\n"
            + "    \"idrDtlRendSpec\": \"p\",\n"
            + "    \"idrDtlRendNpi\": \"d8\",\n"
            + "    \"idrDtlRendProv\": \"w91tc\",\n"
            + "    \"idrKDtlFacProvNpi\": \"5mf1vkcx27\",\n"
            + "    \"idrDtlAmbPickupAddres1\": \"x1r8fxsv92xjqs\",\n"
            + "    \"idrDtlAmbPickupAddres2\": \"4www6v2pg5j7\",\n"
            + "    \"idrDtlAmbPickupCity\": \"0kp0d460jww68\",\n"
            + "    \"idrDtlAmbPickupState\": \"3\",\n"
            + "    \"idrDtlAmbPickupZipcode\": \"5683c15n\",\n"
            + "    \"idrDtlAmbDropoffName\": \"dd\",\n"
            + "    \"idrDtlAmbDropoffAddrL1\": \"fb3xtvwksxkc\",\n"
            + "    \"idrDtlAmbDropoffAddrL2\": \"btsxq5nxdx202gjq\",\n"
            + "    \"idrDtlAmbDropoffCity\": \"m532t1xfp34wfj8k\",\n"
            + "    \"idrDtlAmbDropoffState\": \"b\",\n"
            + "    \"idrDtlAmbDropoffZipcode\": \"jt1p\"\n"
            + "  }, {\n"
            + "    \"idrDtlFromDate\": \"2021-01-30\",\n"
            + "    \"idrDtlToDate\": \"2021-05-11\",\n"
            + "    \"idrProcCode\": \"59m\",\n"
            + "    \"idrModOne\": \"r\",\n"
            + "    \"idrModTwo\": \"h2\",\n"
            + "    \"idrModThree\": \"f2\",\n"
            + "    \"idrModFour\": \"b\",\n"
            + "    \"idrDtlPrimaryDiagCode\": \"d1s\",\n"
            + "    \"idrKPosLnameOrg\": \"rtdwxjwzzmpjbfmzzgwnfhwrchbkddjksntcmszd\",\n"
            + "    \"idrKPosFname\": \"pddcph\",\n"
            + "    \"idrKPosMname\": \"dmgkdnbkgwgjmpnwnwz\",\n"
            + "    \"idrKPosAddr1\": \"vtb3p2np5br9bt80rk1bqrsk75pz1s\",\n"
            + "    \"idrKPosAddr21st\": \"r\",\n"
            + "    \"idrKPosAddr22nd\": \"d\",\n"
            + "    \"idrKPosCity\": \"gwqsgvzdnzhhhwtwrmhhpkqmwp\",\n"
            + "    \"idrKPosState\": \"h\",\n"
            + "    \"idrKPosZip\": \"775768221342849\",\n"
            + "    \"idrDtlDiagIcdTypeUnrecognized\": \"z\",\n"
            + "    \"idrDtlStatusUnrecognized\": \"c\",\n"
            + "    \"idrTosUnrecognized\": \"5\",\n"
            + "    \"idrTwoDigitPosEnum\": \"TWO_DIGIT_PLAN_OF_SERVICE_TRIBAL_638_FREE_STANDING_FACILITY\",\n"
            + "    \"idrDtlRendType\": \"c\",\n"
            + "    \"idrDtlRendSpec\": \"58\",\n"
            + "    \"idrDtlRendNpi\": \"5xb6\",\n"
            + "    \"idrDtlRendProv\": \"p1c\",\n"
            + "    \"idrKDtlFacProvNpi\": \"j\",\n"
            + "    \"idrDtlAmbPickupAddres1\": \"b\",\n"
            + "    \"idrDtlAmbPickupAddres2\": \"cxm7wwxhcszqwqg9wp\",\n"
            + "    \"idrDtlAmbPickupCity\": \"88b761xhv09s4\",\n"
            + "    \"idrDtlAmbPickupState\": \"q\",\n"
            + "    \"idrDtlAmbPickupZipcode\": \"6n\",\n"
            + "    \"idrDtlAmbDropoffName\": \"k31b0dq9hh5qtphx\",\n"
            + "    \"idrDtlAmbDropoffAddrL1\": \"zz44x5\",\n"
            + "    \"idrDtlAmbDropoffAddrL2\": \"sqp7196cwx0w\",\n"
            + "    \"idrDtlAmbDropoffCity\": \"hmgmx45jcdtszrr5k\",\n"
            + "    \"idrDtlAmbDropoffState\": \"n\",\n"
            + "    \"idrDtlAmbDropoffZipcode\": \"301rcr49n\"\n"
            + "  }, {\n"
            + "    \"idrDtlFromDate\": \"2021-04-15\",\n"
            + "    \"idrDtlToDate\": \"2021-04-23\",\n"
            + "    \"idrProcCode\": \"2cb4\",\n"
            + "    \"idrModOne\": \"z\",\n"
            + "    \"idrModTwo\": \"6z\",\n"
            + "    \"idrModThree\": \"n\",\n"
            + "    \"idrModFour\": \"k\",\n"
            + "    \"idrDtlPrimaryDiagCode\": \"52\",\n"
            + "    \"idrKPosLnameOrg\": \"qbmthrddc\",\n"
            + "    \"idrKPosFname\": \"cjwwfs\",\n"
            + "    \"idrKPosMname\": \"vdwpkmfxtmbzfd\",\n"
            + "    \"idrKPosAddr1\": \"2hxdsmn3nm21zg325z35\",\n"
            + "    \"idrKPosAddr21st\": \"6z\",\n"
            + "    \"idrKPosAddr22nd\": \"skg403qdw2j7\",\n"
            + "    \"idrKPosCity\": \"cjpfsgrfhvm\",\n"
            + "    \"idrKPosState\": \"k\",\n"
            + "    \"idrKPosZip\": \"815610696201\",\n"
            + "    \"idrDtlDiagIcdTypeUnrecognized\": \"c\",\n"
            + "    \"idrDtlStatusUnrecognized\": \"q\",\n"
            + "    \"idrTosUnrecognized\": \"p\",\n"
            + "    \"idrTwoDigitPosUnrecognized\": \"sr\",\n"
            + "    \"idrDtlRendType\": \"jt\",\n"
            + "    \"idrDtlRendSpec\": \"c\",\n"
            + "    \"idrDtlRendNpi\": \"5865\",\n"
            + "    \"idrDtlRendProv\": \"d3b9qp\",\n"
            + "    \"idrKDtlFacProvNpi\": \"3c\",\n"
            + "    \"idrDtlAmbPickupAddres1\": \"b3h\",\n"
            + "    \"idrDtlAmbPickupAddres2\": \"mtc1db1hrr\",\n"
            + "    \"idrDtlAmbPickupCity\": \"gxh18bcxj3w5x\",\n"
            + "    \"idrDtlAmbPickupState\": \"s5\",\n"
            + "    \"idrDtlAmbPickupZipcode\": \"mjws\",\n"
            + "    \"idrDtlAmbDropoffName\": \"pf2pt356zshhvbnk\",\n"
            + "    \"idrDtlAmbDropoffAddrL1\": \"5kqv3346ndtxg01sdxtg\",\n"
            + "    \"idrDtlAmbDropoffAddrL2\": \"gm5vr\",\n"
            + "    \"idrDtlAmbDropoffCity\": \"896pk66cr9fx3s\",\n"
            + "    \"idrDtlAmbDropoffState\": \"p\",\n"
            + "    \"idrDtlAmbDropoffZipcode\": \"x\"\n"
            + "  }],\n"
            + "  \"idrBillProvGroupIndUnrecognized\": \"s\",\n"
            + "  \"idrHdrFromDos\": \"2021-01-30\",\n"
            + "  \"idrHdrToDos\": \"2021-05-11\",\n"
            + "  \"idrAssignmentEnum\": \"CLAIM_ASSIGNMENT_NON_ASSIGNED_LAB_SERVICES\",\n"
            + "  \"idrClmLevelIndEnum\": \"CLAIM_LEVEL_INDICATOR_ADJUSTED\",\n"
            + "  \"idrHdrAudit\": 15385,\n"
            + "  \"idrHdrAuditIndEnum\": \"AUDIT_INDICATOR_DETAIL_EDIT_NUMBER\",\n"
            + "  \"idrUSplitReasonEnum\": \"SPLIT_REASON_CODE_CARE_PLAN_OVERSIGHT\",\n"
            + "  \"idrJReferringProvNpi\": \"2v3f\",\n"
            + "  \"idrJFacProvNpi\": \"2wf2\",\n"
            + "  \"idrUDemoProvNpi\": \"p\",\n"
            + "  \"idrUSuperNpi\": \"mxp3k0bth\",\n"
            + "  \"idrUFcadjBilNpi\": \"s2vgfx1nj\",\n"
            + "  \"idrAmbPickupAddresLine1\": \"3q6ftzx2266s0g\",\n"
            + "  \"idrAmbPickupAddresLine2\": \"rqqx9qp24pb3rhw1\",\n"
            + "  \"idrAmbPickupCity\": \"5tt\",\n"
            + "  \"idrAmbPickupState\": \"3\",\n"
            + "  \"idrAmbPickupZipcode\": \"dnq42s3tk\",\n"
            + "  \"idrAmbDropoffName\": \"z1hgc8h\",\n"
            + "  \"idrAmbDropoffAddrLine1\": \"c5p47kh\",\n"
            + "  \"idrAmbDropoffAddrLine2\": \"hn0\",\n"
            + "  \"idrAmbDropoffCity\": \"66frjsg26038pgrm3s4\",\n"
            + "  \"idrAmbDropoffState\": \"b\",\n"
            + "  \"idrAmbDropoffZipcode\": \"qhvqh\",\n"
            + "  \"mcsAudits\": [{\n"
            + "    \"idrJAuditNum\": 3652,\n"
            + "    \"idrJAuditIndEnum\": \"CUTBACK_AUDIT_INDICATOR__AUDIT_NUM_IS_ZEROES\",\n"
            + "    \"idrJAuditDispUnrecognized\": \"j\"\n"
            + "  }, {\n"
            + "    \"idrJAuditNum\": 14466,\n"
            + "    \"idrJAuditIndEnum\": \"CUTBACK_AUDIT_INDICATOR_HEADER_EDIT_NUMBER\",\n"
            + "    \"idrJAuditDispEnum\": \"CUTBACK_AUDIT_DISPOSITION_CUTBACK_TO_PAY_PERCENT\"\n"
            + "  }, {\n"
            + "    \"idrJAuditNum\": 21517,\n"
            + "    \"idrJAuditIndEnum\": \"CUTBACK_AUDIT_INDICATOR_AUDIT_NUMBER\",\n"
            + "    \"idrJAuditDispEnum\": \"CUTBACK_AUDIT_DISPOSITION_CUTBACK_TO_PAY_PERCENT\"\n"
            + "  }, {\n"
            + "    \"idrJAuditNum\": 12848,\n"
            + "    \"idrJAuditIndEnum\": \"CUTBACK_AUDIT_INDICATOR_AUDIT_NUMBER\",\n"
            + "    \"idrJAuditDispUnrecognized\": \"g\"\n"
            + "  }, {\n"
            + "    \"idrJAuditNum\": 18904,\n"
            + "    \"idrJAuditIndUnrecognized\": \"9\",\n"
            + "    \"idrJAuditDispUnrecognized\": \"f\"\n"
            + "  }, {\n"
            + "    \"idrJAuditNum\": 11920,\n"
            + "    \"idrJAuditIndEnum\": \"CUTBACK_AUDIT_INDICATOR_HEADER_EDIT_NUMBER\",\n"
            + "    \"idrJAuditDispUnrecognized\": \"7\"\n"
            + "  }, {\n"
            + "    \"idrJAuditNum\": 14217,\n"
            + "    \"idrJAuditIndUnrecognized\": \"f\",\n"
            + "    \"idrJAuditDispUnrecognized\": \"t\"\n"
            + "  }],\n"
            + "  \"mcsLocations\": [{\n"
            + "    \"idrLocClerk\": \"2hm3\",\n"
            + "    \"idrLocCode\": \"j\",\n"
            + "    \"idrLocDate\": \"2021-05-16\",\n"
            + "    \"idrLocActvCodeUnrecognized\": \"5\"\n"
            + "  }, {\n"
            + "    \"idrLocClerk\": \"5qr\",\n"
            + "    \"idrLocCode\": \"h\",\n"
            + "    \"idrLocDate\": \"2021-06-09\",\n"
            + "    \"idrLocActvCodeUnrecognized\": \"t\"\n"
            + "  }, {\n"
            + "    \"idrLocClerk\": \"k7\",\n"
            + "    \"idrLocCode\": \"g\",\n"
            + "    \"idrLocDate\": \"2021-04-16\",\n"
            + "    \"idrLocActvCodeUnrecognized\": \"j\"\n"
            + "  }],\n"
            + "  \"mcsAdjustments\": [{\n"
            + "    \"idrAdjDate\": \"2021-06-03\",\n"
            + "    \"idrXrefIcn\": \"6zdpt8521v\",\n"
            + "    \"idrAdjClerk\": \"b9s\",\n"
            + "    \"idrInitCcn\": \"tkrmm3q85tsrxk\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-06-25\",\n"
            + "    \"idrAdjBEombAmt\": \"31241.43\",\n"
            + "    \"idrAdjPEombAmt\": \"49294.07\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-05-04\",\n"
            + "    \"idrXrefIcn\": \"7130q55p5fq7\",\n"
            + "    \"idrAdjClerk\": \"8\",\n"
            + "    \"idrInitCcn\": \"csxfrc\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-03-14\",\n"
            + "    \"idrAdjBEombAmt\": \"9774.79\",\n"
            + "    \"idrAdjPEombAmt\": \"4400.03\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-04-25\",\n"
            + "    \"idrXrefIcn\": \"88107gzznnx9v5\",\n"
            + "    \"idrAdjClerk\": \"ws5h\",\n"
            + "    \"idrInitCcn\": \"9ffc\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-04-15\",\n"
            + "    \"idrAdjBEombAmt\": \"64823.96\",\n"
            + "    \"idrAdjPEombAmt\": \"0.76\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-02-19\",\n"
            + "    \"idrXrefIcn\": \"hc5ft3rk\",\n"
            + "    \"idrAdjClerk\": \"9\",\n"
            + "    \"idrInitCcn\": \"dhftsdx4kt02v1z\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-02-18\",\n"
            + "    \"idrAdjBEombAmt\": \"1249.95\",\n"
            + "    \"idrAdjPEombAmt\": \"614.24\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-01-31\",\n"
            + "    \"idrXrefIcn\": \"x79m54mr7s\",\n"
            + "    \"idrAdjClerk\": \"6\",\n"
            + "    \"idrInitCcn\": \"56gg184r764zdhn\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-02-18\",\n"
            + "    \"idrAdjBEombAmt\": \"61.58\",\n"
            + "    \"idrAdjPEombAmt\": \"232.81\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-01-20\",\n"
            + "    \"idrXrefIcn\": \"mbt6439p19k\",\n"
            + "    \"idrAdjClerk\": \"4m\",\n"
            + "    \"idrInitCcn\": \"56kkvfgt24x80m\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-04-20\",\n"
            + "    \"idrAdjBEombAmt\": \"985.37\",\n"
            + "    \"idrAdjPEombAmt\": \"221.96\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-06-07\",\n"
            + "    \"idrXrefIcn\": \"g1mvmvt12dc24p9\",\n"
            + "    \"idrAdjClerk\": \"4tq8\",\n"
            + "    \"idrInitCcn\": \"n\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-03-20\",\n"
            + "    \"idrAdjBEombAmt\": \"4.60\",\n"
            + "    \"idrAdjPEombAmt\": \"720.12\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-04-04\",\n"
            + "    \"idrXrefIcn\": \"2f16ft56t3wn999\",\n"
            + "    \"idrAdjClerk\": \"m623\",\n"
            + "    \"idrInitCcn\": \"44mvzmqx8\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-06-24\",\n"
            + "    \"idrAdjBEombAmt\": \"17917.41\",\n"
            + "    \"idrAdjPEombAmt\": \"4229.66\"\n"
            + "  }, {\n"
            + "    \"idrAdjDate\": \"2021-04-28\",\n"
            + "    \"idrXrefIcn\": \"2s2m14px5z\",\n"
            + "    \"idrAdjClerk\": \"7\",\n"
            + "    \"idrInitCcn\": \"85c7\",\n"
            + "    \"idrAdjChkWrtDt\": \"2021-01-18\",\n"
            + "    \"idrAdjBEombAmt\": \"79.62\",\n"
            + "    \"idrAdjPEombAmt\": \"9.94\"\n"
            + "  }]\n"
            + "}",
        json);
  }
}
